@@ -26,6 +26,8 @@ EXTRA_DIST = \
 	ndir.h \
 	pwd.h \
 	rcmd.h \
+	stamp-sh \
+	stdbool.h \
 	filesubr.c \
 	mkdir.c \
 	ndir.c \
@@ -44,7 +46,7 @@ SUBDIRS = SCC
 ###
 ### Maintainer targets
 ###
-all-local: config.h
+all-local: config.h stdbool.h
 config.h: stamp-ch
 stamp-ch: config.h.in $(top_srcdir)/configure
 	@echo "/* This file is generated via a rule in Makefile.am from the" \
@@ -62,6 +64,24 @@ stamp-ch: config.h.in $(top_srcdir)/configure
 	      cp config.tmp $(srcdir)/config.h)
 	-@rm -f config.tmp
 	@cp $(srcdir)/config.h $@
+
+stdbool.h: stamp-sh
+stamp-sh: $(top_srcdir)/lib/stdbool_.h
+	@echo "/* This file is generated via a rule in Makefile.am from the" \
+	  >stdbool.tmp
+	@echo " * ../lib/stdbool_.h.in file." >>stdbool.tmp
+	@echo " *" >>stdbool.tmp
+	@echo " * *** DO NOT EDIT THIS FILE DIRECTLY ***" >>stdbool.tmp
+	@echo " *" >>stdbool.tmp
+	@echo " * Edit ../lib/stdbool_.h instead." >>stdbool.tmp
+	@echo " */" >>stdbool.tmp
+	sed "s/@""HAVE__BOOL""@/$(HAVE__BOOL)/" <$(top_srcdir)/lib/stdbool_.h \
+	  >>stdbool.tmp
+	@cmp -s stdbool.tmp $(srcdir)/stdbool.h \
+	  || (echo "Updating stdbool.h"; \
+	      cp stdbool.tmp $(srcdir)/stdbool.h)
+	-@rm -f stdbool.tmp
+	@cp $(srcdir)/stdbool.h $@
 
 # for backwards compatibility with the old makefiles
 realclean: maintainer-clean
